# MultiPL-E

./: pyproject.toml
dataset_builder/: dataset_diff.py  generic_translator.py  humaneval_to_ada.py  humaneval_to_coq.py  humaneval_to_cpp.py  humaneval_to_cs.py  humaneval_to_d.py  humaneval_to_dart.py  humaneval_to_elixir.py  humaneval_to_fs.py  humaneval_to_fs_untyped.py  humaneval_to_go.py  humaneval_to_hs.py  humaneval_to_java.py  humaneval_to_jl.py  humaneval_to_js.py  humaneval_to_lean.py  humaneval_to_matlab.py  humaneval_to_ml.py  humaneval_to_php-multiline.py  humaneval_to_php.py  humaneval_to_pl.py  humaneval_to_py.py  humaneval_to_py_no_types.py  humaneval_to_rb.py  humaneval_to_rkt-multiline.py  humaneval_to_rkt.py  humaneval_to_rs.py  humaneval_to_scala.py  humaneval_to_sh.py  humaneval_to_swift.py  humaneval_to_ts.py  humaneval_to_ts_any.py  prepare_prompts_for_hfhub.py
